{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 91,
  "lineage": "738daf44-3a83-65b3-1a79-704183337256",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:vpc/vpc-0c01356817b23e43e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00366d96de9943c51",
            "default_route_table_id": "rtb-09000fc32697a39bd",
            "default_security_group_id": "sg-0ae0dd6a427431914",
            "dhcp_options_id": "dopt-08da39948b01206d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c01356817b23e43e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09000fc32697a39bd",
            "owner_id": "321510646715"
          }
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/default-alb/d3f05315fd5b2c7e",
            "arn_suffix": "app/default-alb/d3f05315fd5b2c7e",
            "dns_name": "default-alb-745267390.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/default-alb/d3f05315fd5b2c7e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "default-alb",
            "security_groups": [
              "sg-0242f5055e7620d44"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0123927040f737934"
              },
              {
                "subnet_id": "subnet-091d3907f6eef7fca"
              }
            ],
            "subnets": [
              "subnet-0123927040f737934",
              "subnet-091d3907f6eef7fca"
            ],
            "tags": {
              "Environment": "default"
            },
            "vpc_id": "vpc-0c01356817b23e43e",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:listener/app/default-alb/d3f05315fd5b2c7e/da9572556885f536",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-default-one-lb/94197e50daad5264",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:listener/app/default-alb/d3f05315fd5b2c7e/da9572556885f536",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/default-alb/d3f05315fd5b2c7e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_alb.aws_lb.alb",
            "module.aws_ec2.aws_lb_target_group.green",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-08c2fa652917cd4ea",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c2fa652917cd4ea",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03b1a80a360b50a45",
            "private_dns": "ip-172-31-60-182.eu-west-2.compute.internal",
            "private_ip": "172.31.60.182",
            "public_dns": "ec2-18-130-47-12.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.47.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f404576812a2b536",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0123927040f737934",
            "tags": {
              "Name": "default-one-blue-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ce4357a5f79509f",
              "sg-042a4d1ede77a47bf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-0b2a417d87c32ee00",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2a417d87c32ee00",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-028843b5d1a24f58b",
            "private_dns": "ip-172-31-61-78.eu-west-2.compute.internal",
            "private_ip": "172.31.61.78",
            "public_dns": "ec2-35-178-166-102.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.166.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03e12b5d9bbfef883",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091d3907f6eef7fca",
            "tags": {
              "Name": "default-one-blue-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ce4357a5f79509f",
              "sg-042a4d1ede77a47bf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-0dd016078c914e7b1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd016078c914e7b1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-072863b60ff054abf",
            "private_dns": "ip-172-31-60-176.eu-west-2.compute.internal",
            "private_ip": "172.31.60.176",
            "public_dns": "ec2-35-178-4-65.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.4.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0149b63539c5deded",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0123927040f737934",
            "tags": {
              "Name": "default-one-green-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ce4357a5f79509f",
              "sg-042a4d1ede77a47bf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-089b49517d59c00ef",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089b49517d59c00ef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ceec180f41fefad",
            "private_dns": "ip-172-31-61-206.eu-west-2.compute.internal",
            "private_ip": "172.31.61.206",
            "public_dns": "ec2-18-134-144-64.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.144.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0000601d28b405524",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091d3907f6eef7fca",
            "tags": {
              "Name": "default-one-green-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03ce4357a5f79509f",
              "sg-042a4d1ede77a47bf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-default-one-lb/4b7c495d33d199b9",
            "arn_suffix": "targetgroup/blue-default-one-lb/4b7c495d33d199b9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-default-one-lb/4b7c495d33d199b9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blue-default-one-lb",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c01356817b23e43e"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-default-one-lb/94197e50daad5264",
            "arn_suffix": "targetgroup/green-default-one-lb/94197e50daad5264",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-default-one-lb/94197e50daad5264",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "green-default-one-lb",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c01356817b23e43e"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-default-one-lb/4b7c495d33d199b9-20210121111937695500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-default-one-lb/4b7c495d33d199b9",
            "target_id": "i-08c2fa652917cd4ea"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.blue",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.blue",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-default-one-lb/4b7c495d33d199b9-20210121111937803100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-default-one-lb/4b7c495d33d199b9",
            "target_id": "i-0b2a417d87c32ee00"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.blue",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.blue",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-default-one-lb/94197e50daad5264-20210121111937691400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-default-one-lb/94197e50daad5264",
            "target_id": "i-0dd016078c914e7b1"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.green",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.green",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-default-one-lb/94197e50daad5264-20210121111937748000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-default-one-lb/94197e50daad5264",
            "target_id": "i-089b49517d59c00ef"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.green",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.green",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:security-group/sg-0242f5055e7620d44",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03ce4357a5f79509f"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0242f5055e7620d44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "321510646715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-alb-sc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c01356817b23e43e"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_security_groups.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_to_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:security-group/sg-042a4d1ede77a47bf",
            "description": "Allow http from ALB traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042a4d1ede77a47bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0242f5055e7620d44"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "321510646715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-allow_http-sc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c01356817b23e43e"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:security-group/sg-03ce4357a5f79509f",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ce4357a5f79509f",
            "ingress": [
              {
                "cidr_blocks": [
                  "85.206.68.114/32",
                  "172.31.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "321510646715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-allow_ssh-sc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c01356817b23e43e"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_green_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:subnet/subnet-0123927040f737934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.60.0/24",
            "id": "subnet-0123927040f737934",
            "map_public_ip_on_launch": false,
            "owner_id": "321510646715",
            "tags": {
              "Name": "default-60-subnet"
            },
            "vpc_id": "vpc-0c01356817b23e43e"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:subnet/subnet-091d3907f6eef7fca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.61.0/24",
            "id": "subnet-091d3907f6eef7fca",
            "map_public_ip_on_launch": false,
            "owner_id": "321510646715",
            "tags": {
              "Name": "default-61-subnet"
            },
            "vpc_id": "vpc-0c01356817b23e43e"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}